--- a/gitops/base/subscription.yaml
+++ b/gitops/base/subscription.yaml
@@ -4,13 +4,14 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "2"
   name: grafana-operator
+  namespace: my-grafana
 spec:
   channel: v5
   installPlanApproval: Automatic
   name: grafana-operator
   source: community-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: grafana-operator.v5.6.3
+  startingCSV: grafana-operator.v5.20.0
 ---
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
